--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       background: var(--background);
       color: var(--foreground);
       font-size: calc(100vw / 20);
+      font-family: serif;
+      text-shadow: 0 8px 16px rgba(0, 0, 0, .2);
     }
 
     :root {
